<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory_App_2_GWG_ABND18_home2mars</string>

    <!-- Label for overflow menu option that inserts fake inventory data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Inventory</string>

    <!-- Title text for the empty view, which describes the empty bookcase image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Oh oh!  I am empty, devoid of knowledge and stories.</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Title for the activity to add a new inventory [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_inventory">Add an Inventory</string>

    <!-- Title for the activity to edit an existing inventory [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_inventory">Edit Inventory</string>

    <!-- Label for editor menu option to save inventory and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current inventory [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new inventory has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_successful">Inventory saved</string>

    <!-- Toast message in editor when new inventory has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_failed">Error with saving inventory</string>

    <!-- Toast message in editor when current inventory was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_inventory_successful">Inventory updated</string>

    <!-- Toast message in editor when current inventory has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_inventory_failed">Error with updating inventory</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current inventory [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current inventory was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_successful">Inventory deleted</string>

    <!-- Toast message in editor when current inventory has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_failed">Error with deleting inventory</string>

    <!-- Dialog message to ask the user to confirm deleting the current inventory [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this inventory?</string>

    <!-- Dialog button text for the option to confirm deleting the current inventory [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current inventory [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_product">Product</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_name">Product Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_quantity">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier phone number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Supplier Phone Number</string>

    <!-- Units for inventory price [CHAR LIMIT=5] -->
    <string name="unit_inventory_price">US$</string>

    <!-- Label for price field in the main activity [CHAR LIMIT=30] -->
    <string name="inventory_price">Price (US$): </string>

    <!-- Label for quantity field in the main activity [CHAR LIMIT=30] -->
    <string name="inventory_quantity">In stock: </string>

    <!--Text for any null values during saving to the database-->
    <string name="null_inventory_name">Please supply the inventory\'s name.</string>
    <string name="null_inventory_quantity">Sorry, can not have lesss than zero inventory.</string>
    <string name="null_supplier_name">Please supply the supplier\'s name.</string>
    <string name="null_supplier_phone">Please supply the supplier\'s phone.</string>

    <!--Text for sale process -->
    <string name="thank_you_after_sale">Thank you for your patronage.</string>
    <string name="sold_out_message">Sorry, this inventory was sold out.</string>


</resources>
