<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Product category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_margin"
            android:layout_weight="2"
            android:paddingLeft="@dimen/tiny_margin"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_inventory_name"
                android:hint="@string/hint_inventory_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_inventory_price"
                android:hint="@string/hint_inventory_price"
                android:inputType="number"
                android:drawableStart="@drawable/ic_currency_usd_black_18dp"
                style="@style/EditorFieldStyle" />

            <!-- Quantity field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="@dimen/tiny_margin"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/remove_inventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="true"
                    android:src="@drawable/ic_remove_circle" />

                <EditText
                    android:id="@+id/edit_inventory_quantity"
                    android:hint="@string/hint_inventory_quantity"
                    android:inputType="number"
                    android:gravity="center"
                    style="@style/EditorFieldStyle" />

                <ImageButton
                    android:id="@+id/add_inventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="true"
                    android:src="@drawable/ic_add_circle" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_margin"
            android:layout_weight="2"
            android:paddingLeft="@dimen/tiny_margin"
            android:orientation="vertical">

            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier phone field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="@dimen/tiny_margin"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    android:hint="@string/hint_supplier_phone"
                    android:inputType="phone"
                    android:drawableStart="@drawable/phone_classic"
                    style="@style/EditorFieldStyle" />

                <Button
                    android:id="@+id/call_supplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="CALL"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
